<resources>
    <string name="app_name">NoteBook</string>
    <string name="todo">TODO</string>
    <string name="username">用户名</string>
    <string name="createLogin">创建账户</string>
    <string name="login">登录</string>
    <string name="remember">记住用户名和密码</string>
    <string name="password">密码</string>
    <string name="head">HEAD</string>
    <string name="background">BACKGROUND</string>
    <string name="create">注册</string>
    <string name="cancel">取消</string>
</resources>