<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.fragment.LoginFragment">

    <ImageView
        android:id="@+id/login_iv_fragment_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:contentDescription="@string/background"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/head"
        android:src="@drawable/head"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/login_et_fragment_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_USERNAME"
            android:background="@color/white"
            android:inputType="text"
            android:lines="1"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/login_cb_fragment_remember"
        app:layout_constraintEnd_toEndOf="@+id/login_cb_fragment_remember"
        app:layout_constraintStart_toStartOf="@+id/login_cb_fragment_remember"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/login_et_fragment_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PASSWORD"
            android:background="@color/white"
            android:inputType="textPassword"
            android:lines="1"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_cb_fragment_remember"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:hint="@string/remember"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_fragment_login"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_fragment_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_fragment_login"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/login_btn_fragment_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_fragment_create"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_fragment_create"
        app:layout_constraintStart_toStartOf="@+id/login_btn_fragment_create"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/login_btn_fragment_create"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:hint="@string/createLogin"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_iv_fragment_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>